# ansible-nifi

./: .gitignore  .travis.yml  .yamllint  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yaml  main.yml
files/: USERTrustRSACertificationAuthority.crt
handlers/: main.yml
meta/: main.yml
molecule/backup-restore/: Dockerfile.j2  Dockerfile.minio.j2  converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
molecule/certs/: converge.yml  molecule.yml  requirements.yml
molecule/certs/tests/: test_certs.py
molecule/default/: converge.yml  molecule.yml  playbook.yml  requirements.yml
molecule/default/tests/: test_default.py
molecule/parameter-contexts/: converge.yml  molecule.yml  verify.yml
molecule/parameter-contexts/verifications/: contexts.yml  params.yml
tasks/: config.yaml  config.yml  install.yaml  install.yml  install_backup_restore.yml  install_jq.yml  install_toolkit.yml  main.yaml  main.yml  set_parameter_contexts.yml  test.yml
tasks/parameter_contexts/: main.yml  parameter_context_tasks.yml  set_params.yml
templates/: myid.j2  nifi-backup.sh.j2  nifi-restore.sh.j2  nifi-startup.sh.j2  nifi.service.j2  set-nifi-parameters.py.j2  with-java-home.sh.j2
templates/config/: authorizers.xml.j2  login-identity-providers.xml.j2  nifi.properties.j2  nifi.sh.j2  state-management.xml.j2  zookeeper.properties.j2
tests/: test.yml
vars/: main.yaml  main.yml
