[tool.poetry]
name = "ansible-nifi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "2.8.10"

[tool.poetry.dev-dependencies]
molecule = {extras = ["docker"], version = "^3.0.2"}
flake8 = "^3.7.9"
pylint = "^2.4.4"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
